# distract

./: .gitignore  Makefile.am  configure.ac  readme.txt  tarlist  ziplist
doc/: .gitignore  Makefile  README.txt  askmap.txt  avmap.txt  cmtran.txt  density.txt  distrat.bib  distrat.txt  drdoc.dvi  drdoc.hp  drdoc.ps  drdoc.tex  drsort.txt  install.dos  install.unx  iodeg.txt  jom.bib  jpgref.bst  list  makefile  readme.doc  ross.txt  saved.map  shortdr.out  test.map  tun01  tun02  tun03  tun04  tun05  tun06  tun07  tun08  tun09  tun10
source/: .gitignore  Makefile.am  amlang.c  askmap.c  avmap.c  cmtran.c  density.c  distrat.c  distrat.h  drsort.c  english.aml  install.mak  iodeg.c  lang.h  magyar.aml  makefile.djg  makefile.dst  makefile.gcc  makefile.tcc  makefile.unx  mapcache.c  matutil.c  readmap.c  readme.src  ross.c  rossify.c  version.c  writemap.c
