bin_PROGRAMS = distrat iodeg askmap avmap ross drsort density cmtran
# bin_PROGRAMS = distrat
noinst_LIBRARIES = libdram.a
libdram_a_SOURCES = matutil.c readmap.c mapcache.c writemap.c version.c


distrat_LDADD = libdram.a
iodeg_LDADD = libdram.a
askmap_LDADD = libdram.a
avmap_LDADD = libdram.a
ross_LDADD = libdram.a
drsort_LDADD = libdram.a
density_LDADD = libdram.a
cmtran_LDADD = libdram.a

askmap_SOURCES = askmap.c amlang.c rossify.c
ross_SOURCES = ross.c rossify.c
